fix: app icon b-r & pad work correctly on mobile

--- a/components/Branding/AppIcon/AppIcon.module.scss
+++ b/components/Branding/AppIcon/AppIcon.module.scss
@@ -1,11 +1,11 @@
 .appIcon {
   background: rgba(145, 107, 255, 0.25);
   backdrop-filter: blur(0.5rem);
-  border-radius: 1.75rem;
+  border-radius: 1.75em;
   width: 7em;
   height: 7em;
 
   div {
-    padding: 0.5rem;
+    padding: 0.5em;
   }
 }
